--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -26,5 +26,6 @@
 .header {
     .heading-text {
         font-size: $font-size-h1;
+        letter-spacing: 3px;
     }
 }
