--- a/styles/sass/layouts/_header.scss
+++ b/styles/sass/layouts/_header.scss
@@ -8,7 +8,7 @@
     }
 
     &__image-box {
-        height: 60rem;
+        height: 55rem;
         position: relative;
 
         .heading-image {
